; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/ieee80211/extr_ieee80211_softmac.c_ieee80211_resp_to_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/ieee80211/extr_ieee80211_softmac.c_ieee80211_resp_to_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_device = type { i32 }
%struct.sk_buff = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee80211_resp_to_probe(%struct.ieee80211_device* %0, i32* %1) #0 {
  %3 = alloca %struct.ieee80211_device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  store %struct.ieee80211_device* %0, %struct.ieee80211_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call %struct.sk_buff* @ieee80211_probe_resp(%struct.ieee80211_device* %6, i32* %7)
  store %struct.sk_buff* %8, %struct.sk_buff** %5, align 8
  %9 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %10 = icmp ne %struct.sk_buff* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %13 = load %struct.ieee80211_device*, %struct.ieee80211_device** %3, align 8
  %14 = call i32 @softmac_mgmt_xmit(%struct.sk_buff* %12, %struct.ieee80211_device* %13)
  br label %15

15:                                               ; preds = %11, %2
  ret void
}

declare dso_local %struct.sk_buff* @ieee80211_probe_resp(%struct.ieee80211_device*, i32*) #1

declare dso_local i32 @softmac_mgmt_xmit(%struct.sk_buff*, %struct.ieee80211_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
